--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -3,6 +3,7 @@ certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
 Flask==1.0.2
+Flask-Cors==3.0.7
 google-api-core==1.7.0
 google-auth==1.6.2
 google-cloud-vision==0.35.2
