--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.7.1
 cachetools==3.0.0
 certifi==2018.11.29
 chardet==3.0.4
@@ -20,5 +21,6 @@ pytz==2018.9
 requests==2.21.0
 rsa==4.0
 six==1.12.0
+soupsieve==1.7.3
 urllib3==1.24.1
 Werkzeug==0.14.1
