--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -3,8 +3,12 @@ cachetools==3.0.0
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
+cymem==2.0.2
+cytoolz==0.9.0.1
+dill==0.2.9
 Flask==1.0.2
 Flask-Cors==3.0.7
+Flask-Session==0.3.1
 google-api-core==1.7.0
 google-auth==1.6.2
 google-cloud-vision==0.35.2
@@ -14,16 +18,28 @@ idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
+msgpack==0.5.6
+msgpack-numpy==0.4.3.2
+murmurhash==1.0.1
+numpy==1.16.0
+plac==0.9.6
+preshed==2.0.1
 protobuf==3.6.1
 pyasn1==0.4.5
 pyasn1-modules==0.2.3
 pytz==2018.9
+regex==2018.1.10
 requests==2.21.0
+requests-cache==0.4.13
 rsa==4.0
+scipy==1.2.0
 six==1.12.0
 soupsieve==1.7.3
+spacy==2.0.18
+thinc==6.12.1
+toolz==0.9.0
+tqdm==4.30.0
+ujson==1.35
 urllib3==1.24.1
 Werkzeug==0.14.1
-Flask-Session
-spacy
-plac
+wrapt==1.10.11
